manifests/dev/garage/Service-garage.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
spec:
  ports:
    - name: s3
      port: 3900
      protocol: TCP
      targetPort: s3
    - name: rpc
      port: 3901
      protocol: TCP
      targetPort: rpc
    - name: admin
      port: 3903
      protocol: TCP
      targetPort: admin
  selector:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  type: ClusterIP
